--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prettier"
   ],
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
     "axios": "^1.6.1",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
@@ -58,6 +59,7 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.0",
     "express-rate-limit": "^5.0.0",
+    "googleapis": "^105.0.0",
     "helmet": "^4.1.0",
     "http-status": "^1.4.0",
     "joi": "^17.3.0",
